-----
0.61  [to be released]
    - Added documentation of availability of meta data defined with step
      functions for use by extensions to the Architecture manual
0.60  2019-08-31
    - Added flag to make `pherkin` check for duplicate matching step
      functions to help debugging
    - Added option to specify meta data to step functions and use it in
      extensions; minimally available meta data identifies the file name
      and line where the step function has been defined
    - Added missing dependencies reported by CPANTS
    - Don't include README anymore, as there always has been a README.pod
    - Cleaned up release procedure: 0.58 and 0.59 were sloppy, including
      additional files from the working directory
    - Reformatted CHANGES to allow MetaCPAN to parse it
0.59  2019-08-29
    - Increase minimum Perl version to 5.10
    - Updated languge support from Cucumber upstream repository, adding
      support for: Armenian, Aragonese, Asturian, Azerbaijani, Bosnian,
      Emoji, Irish, Gujarati, Georgian, Macedonian (Cyrilic),
      Macedonian (Latin), Mongolian and Tamil
    - Documentation updates and (hopefully) clarification
    - Fix dist.ini (and META.{yml,json}) 'author' section
    - Add contributors in META.{yml,json}
0.58  2019-08-22
    - Test::BDD::Cucumber has a new home: https://github.com/pherkin
    - Rename links (issues, PRs) to point to the new home
    - Reap finished child processes in the `prove` plugin
      `TAP::Parser::Iterator::PherkinStream`
    - Eliminate empty lines between successive feature
0.57  2019-04-09
    - Add 'match mode'; don't run steps, only check matches against
      defined steps in step files
    - Fix the 'result' argument of the 'post_step' callback of of
      extensions; it used to always be 'failed'
0.56  2018-04-21
    - Minor upgrade to minimum required Moo version to help try and flush
      out some CPAN smokers failure.
0.55  2018-04-11