@@ -79,10 +79,10 @@ Help
 
 C<pherkin> can output using any of the C<Test::BDD::Cucumber::Harness> output
 modules. L<Test::BDD::Cucumber::TermColor> is the default, but
-L<Test::BDD::Cucumber::TestBuilder> is also a reasonable option:
+L<Test::BDD::Cucumber::TAP> is also a reasonable option:
 
   pherkin -o TermColor some/path/feature   # The default
-  pherkin -o TestBuilder some/path/feature # Test::Builder-type text output
+  pherkin -o TAP some/path/feature         # TAP output for e.g. prove
 
 =head1 CONFIGURATION PROFILES
 
