@@ -74,7 +74,7 @@ as generated from C<make test> after C<perl Makefile.PL>.
  use Test::BDD::Cucumber::Loader;
 
  # This harness prints out nice TAP
- use Test::BDD::Cucumber::Harness::TestBuilder;
+ use Test::BDD::Cucumber::Harness::TAP;
 
  # Load a directory with Cucumber files in it. It will recursively execute any
  # file matching .*_steps.pl as a Step file, and .*\.feature as a feature file.
@@ -83,8 +83,8 @@ as generated from C<make test> after C<perl Makefile.PL>.
  my ( $executor, @features ) = Test::BDD::Cucumber::Loader->load(
         't/cucumber_core_features/' );
 
- # Create a Harness to execute against. TestBuilder harness prints TAP
- my $harness = Test::BDD::Cucumber::Harness::TestBuilder->new({});
+ # Create a Harness to execute against. TAP harness prints TAP
+ my $harness = Test::BDD::Cucumber::Harness::TAP->new({});
 
  # For each feature found, execute it, using the Harness to print results
  $executor->execute( $_, $harness ) for @features;
