@@ -9,7 +9,7 @@ use Test::More;
 my @known_harnesses = (
     "Data",                                       # Short form
     "Test::BDD::Cucumber::Harness::TermColor",    # Long form
-    "Test::BDD::Cucumber::Harness::TestBuilder",
+    "Test::BDD::Cucumber::Harness::TAP",
     "Test::BDD::Cucumber::Harness::JSON"
 );
 
