@@ -13,7 +13,7 @@ use Test::CucumberExtensionMetadataVerify;
 my $pherkin = App::pherkin->new;
 push @{$pherkin->extensions}, Test::CucumberExtensionMetadataVerify->new;
 subtest 'Run pherkin in match-only mode', sub {
-    $pherkin->run('-oTestBuilder', '-m', 't/pherkin/match-only/');
+    $pherkin->run('-oTAP', '-m', 't/pherkin/match-only/');
 };
 
 done_testing;
